add auth